PMG-77 Projects tree overflow to message container Fixed long folder names overflow.

--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -844,3 +844,6 @@ button > i[class^="pmap-"] {
   height: auto !important;
 }
 
+tree-viewport {
+  overflow-x: hidden !important;
+}
